Fixed min-width navbar overflow issue

--- a/wondrous/static/css/partials/_navbar.scss
+++ b/wondrous/static/css/partials/_navbar.scss
@@ -133,7 +133,7 @@
     top: 0;
     height: 45px;
     width: 100%;
-    /*background-color: rgb(235,235,235);*/
+    min-width: 750px;
     background-color: rgb(251,251,251);
     z-index: 101;
 
